--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,11 +1,11 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+$penny-green: #637C76
+$penny-green-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $penny-green
+$primary-invert: $penny-green-invert
 $body-color: #333
 $black: #2b2523
 
@@ -87,9 +87,9 @@ footer.footer
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $penny-green-invert
+$menu-item-active-background-color:	$penny-green-invert
+$menu-list-border-left: 1px solid $penny-green-invert
 $menu-label-color: $white-ter
 
 
@@ -142,9 +142,11 @@ $menu-label-color: $white-ter
 
 .marquee h1
   font-family: Hatton semibold
-  font-size: 70px
+  font-size: 95px
+  color: rgb(99, 124, 118)
   display: inline-block
   padding-left: 25%
+  padding: 55px
   animation: marquee 10s linear infinite
 
 @keyframes marquee
@@ -164,8 +166,15 @@ html
   position: relative
   padding: 1.25rem 2.5rem 1.25rem 1.5rem
 
+.title
+  color: #637C76
+
+
+
 .subhead
   max-height: 100px
+  font-family: Harmattan
+
 
   img
     left: 690px
