--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -8,6 +8,11 @@ $primary: $penny-green
 $primary-invert: $penny-green-invert
 $body-color: #333
 $black: #2b2523
+$font-stack: Harmattan, sans serif
+
+body
+  font: 100% $font-stack
+
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -173,7 +178,7 @@ html
 
 .subhead
   max-height: 100px
-  font-family: Harmattan
+  font-family: Harmattan, sans-serif
 
 
   img
@@ -184,5 +189,8 @@ html
     height: auto
     z-index: 50
     bottom: 168px
+
+.is-size-1
+  font-size: 6rem
 
 
