--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -72,6 +72,8 @@ body
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
+
+
 .margin-top-0
   margin-top: 0 !important
 
@@ -179,16 +181,11 @@ html
 .subhead
   max-height: 100px
   font-family: Harmattan, sans-serif
+  text-align: center
 
 
   img
-    left: 690px
-    border-style: none
-    position: relative
-    width: 261px
-    height: auto
-    z-index: 50
-    bottom: 168px
+    
 
 .is-size-1
   font-size: 6rem
