--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -40,8 +40,7 @@ body
   left: 50%
   right: 50%
   margin: 2em -50vw
-  background-size: cover
-  background-position: bottom
+  background-size: 107%
   display: flex
   justify-content: center
   align-items: center
