add static author

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -28,7 +28,7 @@ body
   justify-content: left
   align-items: center
   li
-    padding: 0 2rem 1rem 0
+    padding: 0 2rem .5rem 0
     margin-bottom: 1.5rem
     margin-top: 0
 
@@ -189,4 +189,8 @@ html
 .is-size-1
   font-size: 6rem
 
+.author-footer
+  text-align: center
 
+
+  
