--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -25,12 +25,22 @@ body
   margin-top: 1.5rem
   display: flex
   flex-wrap: wrap
+  
   justify-content: left
   align-items: center
   li
-    padding: 0 2rem .5rem 0
-    margin-bottom: 1.5rem
-    margin-top: 0
+    padding: 7px 10px 6px
+    margin: 2px
+    vertical-align: text-bottom
+    line-height: 13px
+    font-size: 13px
+    font-weight: 600
+    text-align: center
+    border-style: solid
+    border-color: #f1a599
+    
+    border-radius: 15px
+    border-width: 1px
 
 // Helper Classes
 .full-width-image-container
@@ -183,14 +193,15 @@ html
   text-align: center
 
 
-  img
-    
-
 .is-size-1
   font-size: 6rem
 
 .author-footer
   text-align: center
+
+.tags
+  color: #637C76
+
 
 
   
