--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,7 +11,8 @@ $black: #2b2523
 $font-stack: Harmattan, sans serif
 
 body
-  font: 100% $font-stack
+  font-family: 100% $font-stack
+
 
 
 .navbar .navbar-menu
@@ -176,7 +177,8 @@ $menu-label-color: $white-ter
 
 
 html
-  background-color: #F6F1F1 
+  background-color: #F6F1F1
+   
 
 .notification
   background-color: #E2D2CF
@@ -202,7 +204,7 @@ html
   text-align: center
 
 .courses
-  border: .5em solid
+  border: .2em solid
   font-family: Hatton semibold
   font-weight: 400
   color: #545454
@@ -227,7 +229,18 @@ html
     top: 0em
   100%
     top: 0em
-  
+
+.button
+  background-color: #E2D2CF
+  border-color: #637C76
+  border-width: 1px
+  justify-content: center
+  padding-bottom: calc(0.5em - 1px
+  text-align: center
+  font-size: 20px
+
+h6
+  font-size: 17px
 
    
 
