--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -47,23 +47,12 @@ body
 .full-width-image-container
   width: 100vw
   height: 471px
-  position: relative
-  left: 50%
-  right: 50%
-  margin: 2em -50vw
-  background-size: 102%
-  display: flex
-  justify-content: center
-  align-items: center
+  
 
 .full-width-image
-    width: 100vw
-    height: 400px
-    background-size: cover
-    background-position: bottom
-    display: flex
-    justify-content: center
-    align-items: center
+    width: 100%
+    height: auto
+  
 
 .btn
     display: inline-block
