--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -103,7 +103,7 @@ body
   padding: 0 1rem
 footer.footer
   padding: 3rem 0rem 0rem
-  background-color: transparent
+  background-color: #637C76
 
 //Menu overrides
 $menu-item-color: $white-ter
