--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -52,12 +52,13 @@ body
   position: relative
   left: 50%
   right: 50%
-  margin: -1em -50vw
+  margin: 2em -50vw
   background-size: cover
-  background-position: top
+  background-position: bottom
   display: flex
   justify-content: center
-  align-items: center
+  align-items: center 
+  background-image: url("/banner.jpg")
   
 
 .full-width-image
@@ -191,7 +192,7 @@ html
    
 
 .notification
-  background-color: #E2D2CF
+  background-color: #F6F1F1
   border-radius: 4px
   position: relative
   padding: 1.25rem 2.5rem 1.25rem 1.5rem
@@ -373,4 +374,14 @@ header .dropdown-toggle::after
 
 ul.footer-social.social-network
   margin-bottom: 30px
+
+.herobanner
+  align-items: center
+  background-position: center center
+  background-size: cover
+  display: flex
+  justify-content: center
+  overflow: hidden
+  position: relative
+  width: 100%
 
