--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -48,13 +48,9 @@ body
 // Helper Classes
 .full-width-image-container
   width: 100vw
-  height: 400px
   position: relative
-  left: 50%
-  right: 50%
-  margin: 2em -50vw
   background-size: contain
-  background-position: bottom
+  background-position: top
   display: flex
   justify-content: center
   align-items: center 
@@ -63,7 +59,6 @@ body
 
 .full-width-image
     width: 100vw
-    height: 400px
     background-size: contain
     background-position: bottom
     display: flex
