--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -262,3 +262,43 @@ h6
   position: relative
   width: 100%
 
+.footer-title h4 
+  font-style: normal
+  font-weight: bold
+  font-size: 19px
+  line-height: 27px
+  color: #E2D2CF
+  text-transform: inherit
+  font-family: Harmattan
+
+
+.email 
+  border-bottom: 2px solid #000
+  position: relative
+
+.email input 
+  padding: 0px
+  box-shadow: none
+  background: none !important
+  font-size: 32px
+  font-color: 
+  border: 0px
+  border-radius: 0px
+  width: 92%
+
+.fa-arrow-right 
+  position: absolute
+  right: 0px
+  top: 20px
+  font-size: 30px
+
+.form-control
+  display: block
+  width: 100%
+  height: calc(1.5em + .75rem + 2px)
+  font-weight: 400
+  line-height: 1.5
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out
+
+
+
