--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -97,7 +97,9 @@ body
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
-footer.footer
+.footer
+  background-color: #637C76
+.footer.footer
   padding: 3rem 0rem 0rem
   background-color: #637C76
 
@@ -122,7 +124,7 @@ $menu-label-color: $white-ter
 .social a
     padding: .5em .5em .3em .5em
     border-radius: 1em
-    background-color: $white-ter
+    background-color: #637C76
     margin: .5em
     width: 1em
     height: 1em
@@ -261,4 +263,114 @@ h6
   overflow: hidden
   position: relative
   width: 100%
+
+//footer
+
+.footer-title h4 
+  font-style: normal
+  font-weight: bold
+  font-size: 19px
+  line-height: 27px
+  color: #E2D2CF
+  text-transform: inherit
+  font-family: Harmattan
+
+
+.email 
+  border-bottom: 2px solid #000
+  position: relative
+
+.email input 
+  padding: 0px
+  box-shadow: none
+  background: none !important
+  font-size: 32px
+  font-color: 
+  border: 0px
+  border-radius: 0px
+  width: 92%
+  color
+
+.fa-arrow-right 
+  position: absolute
+  right: 0px
+  top: 20px
+  font-size: 30px
+
+.form-control
+  display: block
+  width: 100%
+  height: calc(1.5em + .75rem + 2px)
+  font-weight: 400
+  line-height: 1.5
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out
+
+p.footer-para,
+p.far-away 
+  line-height: 16px
+  color: #ffffff
+
+p.footer-para 
+
+  padding: 8px 0px
+  line-height: 23px
+  color: #4f4f4f
+  font-size: 20px
+  font-weight: bold
+  text-transform: inherit
+
+.footer-title h4 
+
+  font-style: normal
+  font-weight: bold
+  font-size: 19px
+  line-height: 27px
+  color: #4f4f4f
+  text-transform: inherit
+
+.footer-link li a 
+
+  font-style: normal
+  font-weight: normal
+  font-size: 20px
+  line-height: 27px
+  color: #4f4f4f
+  font-weight: bold
+
+.footer-link li 
+
+  padding: 0px 0px 15px 50px
+  text-align: left
+
+.footer-link li a:hover 
+
+  color: #000
+
+.copyright-border 
+
+  border-top: 2px solid #d6d6d6
+  position: relative
+  top: -15px
+
+ul.footer-social li 
+
+ display: inline-block
+  margin-right: 15px
+
+ul.footer-social li a 
+
+  display: inline-block
+  position: relative
+  margin: 0 auto 0 auto
+  -moz-border-radius: 50%
+  -webkit-border-radius: 50%
+  border-radius: 50%
+  text-align: center
+  width: 32px
+  height: 32px
+  font-size: 14px
+  background: #f2f2f2
+
+.social
+  background-color: #637C76
 
