--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -121,7 +121,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
   list-style: none !important
   text-align: left
 .social
-  padding: 2em
+  padding: 0em
 .social a
     padding: .5em .5em .3em .5em
     border-radius: 1em
@@ -278,6 +278,10 @@ h6
   width: 92%
   font-family: inherit
 
+input::placeholder
+  color: #F6F1F1
+  opacity: 80%
+
 .fa-arrow-right 
   position: absolute
   right: 0px
@@ -322,12 +326,12 @@ p.footer-para
   font-weight: normal
   font-size: 20px
   line-height: 27px
-  color: #4f4f4f
+  color: #F6F1F1
   font-weight: bold
 
 .footer-link li 
 
-  padding: 0px 0px 15px 50px
+  padding: 0px 0px 15px 9px
   text-align: left
 
 .footer-link li a:hover 
@@ -366,3 +370,6 @@ ul.footer-social li a
   max-height: 267px
   height: 267px
   width: 80%
+
+.fa-arrow-right
+  color: #F6F1F1
