--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -136,8 +136,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
 .blog-list-item.is-featured
   background-color: #d6400033;
 .blog-list-item header
-  position: absolute
-  bottom: 25px
+  position: relative
+  bottom: -21px
 .blog-list-item.featuredthumbnail
   width: 100%;
   border-top-left-radius: calc(0.25rem - 1px)
@@ -369,7 +369,7 @@ ul.footer-social li a
 .header-contents
   max-height: 267px
   height: 267px
-  width: 80%
+  width: 100%
 
 .fa-arrow-right
   color: #F6F1F1
