--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -145,8 +145,9 @@ $menu-list-border-left: 1px solid $penny-green-invert
 
 .blog-list-item.box
   min-height: 78vh
-  max-height: 78vh
+  max-height: 97vh
   max-width: 59vh
+  height: 97
 
 
 @import "~bulma"
