--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -147,7 +147,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
   min-height: 78vh
   max-height: 97vh
   max-width: 59vh
-  height: 97
+  height: 70vh
+  width: 100%
 
 
 @import "~bulma"
@@ -195,7 +196,7 @@ html
   background-color: #F6F1F1
   border-radius: 4px
   position: relative
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem
+  padding: 1.25rem 0.5rem .25rem 1.5rem
 
 
 
@@ -227,8 +228,8 @@ html
 
 
 .button
-  background-color: #E2D2CF
-  border-color: #637C76
+  background-color: #F6F1F1
+  border-color: #F6F1F1
   border-width: 1px
   justify-content: center
   padding-bottom: calc(0.5em - 1px
@@ -374,3 +375,4 @@ ul.footer-social li a
 
 .fa-arrow-right
   color: #F6F1F1
+
