change image size on box

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -165,7 +165,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .blog-list-item .featured-thumbnail
     text-align: center
     max-width: 100%
-    margin: 0 0 1em
+    margin: 0
 
 
 
@@ -196,7 +196,7 @@ html
   background-color: #F6F1F1
   border-radius: 4px
   position: relative
-  padding: 1.25rem 0.5rem .25rem 1.5rem
+  padding: 0px
 
 
 
@@ -372,6 +372,7 @@ ul.footer-social li a
   max-height: 267px
   height: 267px
   width: 100%
+  padding: 13px
 
 .fa-arrow-right
   color: #F6F1F1
