--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -137,17 +137,17 @@ $menu-list-border-left: 1px solid $penny-green-invert
   background-color: #d6400033;
 .blog-list-item header
   position: relative
-  bottom: -21px
+  bottom: -1px
 .blog-list-item.featuredthumbnail
   width: 100%;
   border-top-left-radius: calc(0.25rem - 1px)
   border-top-right-radius: calc(0.25rem - 1px)
 
 .blog-list-item.box
-  min-height: 78vh
+  min-height: 66vh
   max-height: 97vh
   max-width: 59vh
-  height: 70vh
+  height: 65vh
   width: 100%
 
 
@@ -229,14 +229,17 @@ html
 
 .button
   background-color: #F6F1F1
-  border-color: #F6F1F1
+  border-color: #637C76
   border-width: 1px
   justify-content: center
   padding-bottom: calc(0.5em - 1px
   text-align: center
   font-size: 20px
-  bottom: 10px
-  position: sticky
+  bottom: -11px
+  position: absolute
+  font-family: Harmattan 
+  font-weight: 600
+  width: 89%
 
 h6
   font-size: 17px
