--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -160,12 +160,22 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-basis: 50%
 
 +mobile
+  .blog-list-item.box
+    min-height: 42vh
+    max-height: 97vh
+    max-width: 59vh
+    height: 53vh
+    width: 100%
   .blog-list-item header
     display: block
   .blog-list-item .featured-thumbnail
     text-align: center
     max-width: 100%
     margin: 0
+  .description
+    visibility: hidden
+  .button
+    visibility: hidden
 
 
 
@@ -235,7 +245,7 @@ html
   padding-bottom: calc(0.5em - 1px
   text-align: center
   font-size: 20px
-  bottom: -11px
+  bottom: -29px
   position: absolute
   font-family: Harmattan 
   font-weight: 600
