fix mobile appearance

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -176,6 +176,14 @@ $menu-list-border-left: 1px solid $penny-green-invert
     visibility: hidden
   .button
     visibility: hidden
+  .column
+    display: block
+    flex-basis: 0
+    flex-grow: 1
+    flex-shrink: 1
+    padding: 0.75rem
+    margin: 13px
+    
 
 
 
@@ -187,7 +195,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
   padding-left: 25%
   padding-bottom: 0px
   padding: 55px
-  margin: -88px
+  margin: -56px
   animation: marquee 10s linear infinite
 
 @keyframes marquee
@@ -245,7 +253,7 @@ html
   padding-bottom: calc(0.5em - 1px
   text-align: center
   font-size: 20px
-  bottom: -29px
+  bottom: 21px
   position: absolute
   font-family: Harmattan 
   font-weight: 600
@@ -389,4 +397,6 @@ ul.footer-social li a
 
 .fa-arrow-right
   color: #F6F1F1
+
+
 
