fix mobile appearance

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -183,6 +183,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-shrink: 1
     padding: 0.75rem
     margin: 13px
+  .marquee
+    width: auto
     
 
 
@@ -295,13 +297,12 @@ h6
   box-shadow: none
   background: none !important
   font-size: 32px
-  font-color: #637C76
   border: 0px
   border-radius: 0px
   width: 92%
   font-family: inherit
 
-input::placeholder
+.email input::placeholder
   color: #F6F1F1
   opacity: 80%
 
