--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,5 +1,5 @@
 @import "~bulma/sass/utilities/initial-variables"
-
+@import url('https://fonts.googleapis.com/css2?family=Harmattan&display=swap')
 
 $penny-green: #637C76
 $penny-green-invert: #fff
@@ -160,6 +160,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-basis: 50%
 
 +mobile
+  .body
+    font-family: Harmattan
   .blog-list-item.box
     min-height: 42vh
     max-height: 97vh
