fix klavio link

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -305,6 +305,9 @@ h6
   color: #F6F1F1
   opacity: 0.8
 
+.email input::-internal-autofill-selected
+  background-color: #637C76
+
 .fa-arrow-right 
   position: absolute
   right: 0px
