edit app button

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -233,9 +233,10 @@ html
   text-align: center
 
 .courses
-  border: .2em solid
+  border: .1em solid
   font-family: Hatton semibold
   font-weight: 400
+  font-size: 20px
   color: #545454
   padding: 10px
   background-color: #E2D2CF
