--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -181,8 +181,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-shrink: 1
     padding: 0.75rem
     margin: 13px
-  .marquee
-    width: auto
+  
     
 
 
@@ -192,10 +191,10 @@ $menu-list-border-left: 1px solid $penny-green-invert
   font-size: 95px
   color: rgb(99, 124, 118)
   display: inline-block
-  padding-left: 25%
+  
   padding-bottom: 0px
-  padding: 55px
-  margin: -56px
+  
+  margin: auto
   animation: marquee 10s linear infinite
 
 @keyframes marquee
