--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -154,6 +154,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
 +tablet-only
   .blog-list-item .featured-thumbnail
     flex-basis: 50%
+    min-height: 300px
 
 +mobile
   .body
