fix mobile button

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -155,10 +155,13 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .blog-list-item .featured-thumbnail
     flex-basis: 50%
     min-height: 300px
+  .column
+    width: 75%
 
 +mobile
   .body
     font-family: Harmattan
+    margin: 0px
   .blog-list-item.box
     min-height: 42vh
     max-height: 97vh
@@ -182,6 +185,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-shrink: 1
     padding: 0.75rem
     margin: 13px
+  .courses
+    font-family: Harmattan semibold
   
     
 
