fix mobile button

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -186,20 +186,15 @@ $menu-list-border-left: 1px solid $penny-green-invert
     padding: 0.75rem
     margin: 13px
   .courses
-    font-family: Harmattan semibold
+    font-family: Harmattan
   
     
 
 
 
 .marquee
-  font-family: Hatton semibold
-  font-size: 95px
-  color: rgb(99, 124, 118)
   display: inline-block
-  
   padding-bottom: 0px
-  
   margin: auto
   animation: marquee 10s linear infinite
 
