--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -185,7 +185,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-shrink: 1
     padding: 0.75rem
     margin: 13px
-  .courses
+  a.courses
     font-family: Harmattan
   
     
