fix mobile scroller

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -187,10 +187,12 @@ $menu-list-border-left: 1px solid $penny-green-invert
     margin: 13px
   a.courses
     font-family: Harmattan
+  .marquee
+    padding-bottom: 10px
   
     
 
-
+p.img
 
 .marquee
   display: inline-block
