--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -198,6 +198,7 @@ p.img
   display: inline-block
   padding-bottom: 0px
   margin: auto
+  white-space: nowrap
   animation: marquee 10s linear infinite
 
 @keyframes marquee
