--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -174,6 +174,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
     text-align: center
     max-width: 100%
     margin: 0
+  .author-bio
+    font-size: x-small
   .description
     visibility: hidden
   .button
@@ -192,13 +194,16 @@ $menu-list-border-left: 1px solid $penny-green-invert
   
     
 
-p.img
+.author-bio
+
+
 
 .marquee
   display: inline-block
   padding-bottom: 0px
   margin: auto
   white-space: nowrap
+  overflow: hidden
   animation: marquee 10s linear infinite
 
 @keyframes marquee
