--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -201,9 +201,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
 
 
 .marquee
-  display: inline-block
   padding-bottom: 0px
-  margin: auto
+  margin: 25px
   white-space: nowrap
   overflow: hidden
   animation: marquee 10s linear infinite
