change column size

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -156,8 +156,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .blog-list-item .featured-thumbnail
     flex-basis: 50%
     min-height: 300px
-  .column
-    width: 75%
+  .column.is-4
+    width: 50%
 
 +mobile
   .body
