--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -196,6 +196,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     font-family: Harmattan
   .marquee
     padding-bottom: 10px
+    animation: marquee 7s linear infinite;
     
   
     
