change mobile scroller speed

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -192,11 +192,11 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-shrink: 1
     padding: 0.75rem
     margin: 0px
-  a.courses
+  .a.courses
     font-family: Harmattan
   .marquee
     padding-bottom: 10px
-    animation: marquee 7s linear infinite;
+    animation: marquee 9s linear infinite;
     
   
     
@@ -247,16 +247,7 @@ html
   text-align: center
 
 .courses
-  border: .1em solid
-  font-family: Hatton semibold
-  font-weight: 800
-  font-size: 20px
-  color: #545454
-  padding: 10px
-  background-color: #E2D2CF
-  border-color: #637C76
-  animation: bouncy 2s infinite linear
-  position: relative
+  
 
 
 
