change media size

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -170,6 +170,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     width: 50%
   a.courses
     font-family: Harmattan
+  .blog-list-item.box
   
     
 
@@ -192,6 +193,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
     margin: 0
   .author-bio
     font-size: x-small
+  .blog-list-item.box
+    height: 68vh
   .description
     visibility:
   .button
