change media size

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -194,11 +194,14 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .author-bio
     font-size: x-small
   .blog-list-item.box
-    height: 68vh
+    height: 65vh
   .description
-    visibility:
-  .button
     visibility: hidden
+  .button
+    visibility: 
+    top: 14vh
+    font-weight: 400
+    border-width: 2px
   .column
     display: block
     flex-basis: 0
