change media size

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -194,11 +194,11 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .author-bio
     font-size: x-small
   .blog-list-item.box
-    height: 65vh
+    height: 57vh
   .description
     visibility: hidden
   .button
-    visibility: 
+    visibility: hidden
     top: 14vh
     font-weight: 400
     border-width: 2px
