--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -194,7 +194,9 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .author-bio
     font-size: x-small
   .blog-list-item.box
-    height: 60vh
+    height: fit-content
+  .header-contents
+    height: 25vh
   .description
     visibility: hidden
   .button
