--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -196,9 +196,10 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .blog-list-item.box
     height: fit-content
   .header-contents
-    height: 25vh
+    height: fit-content
   .description
     visibility: hidden
+    height: 0px
   .button
     visibility: hidden
     top: 14vh
