--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -279,7 +279,7 @@ html
   padding-bottom: calc(0.5em - 1px
   text-align: center
   font-size: 20px
-  bottom: 21px
+  bottom: 1vh
   position: absolute
   font-family: Harmattan 
   font-weight: 600
