--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -196,7 +196,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .blog-list-item.box
     height: fit-content
   .header-contents
-    height: fit-content
+    height: 18vh
   .description
     visibility: hidden
     height: 0px
@@ -284,6 +284,17 @@ html
   font-family: Harmattan 
   font-weight: 600
   width: 89%
+
+.description
+  width: 100% 
+  overflow: hidden 
+  text-overflow: ellipsis
+  font-family: Harmattan
+  font-size: 20px
+  font-weight: bold
+  position: inherit
+  bottom: 61px
+  height: 13vh
 
 h6
   font-size: 17px
@@ -419,8 +430,6 @@ ul.footer-social li a
   background-color: #637C76
 
 .header-contents
-  max-height: 267px
-  height: 267px
   width: 100%
   padding: 13px
 
