--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -198,7 +198,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .header-contents
     height: 18vh
   .description
-    visibility: hidden
+    visibility: 
     height: 0px
   .button
     visibility: hidden
