--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -149,7 +149,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
   width: 100%
   border-top-left-radius: calc(0.25rem - 1px)
   border-top-right-radius: calc(0.25rem - 1px)
-
+.blog-list-item.box
+  height: 60vh
 
 
 
@@ -195,8 +196,10 @@ $menu-list-border-left: 1px solid $penny-green-invert
     font-size: x-small
   .blog-list-item.box
     height: fit-content
-  .header-contents
-    height: 18vh
+  .blog-list-item header-contents
+    height: fit-content
+  .content p
+    height: fit-content
   .description
     visibility: 
     height: 0px
