--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -150,7 +150,9 @@ $menu-list-border-left: 1px solid $penny-green-invert
   border-top-left-radius: calc(0.25rem - 1px)
   border-top-right-radius: calc(0.25rem - 1px)
 .blog-list-item.box
-  height: 60vh
+  height: 56vh
+.span
+  content: 
 
 
 
@@ -172,7 +174,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
   a.courses
     font-family: Harmattan
   .blog-list-item.box
-  
+    height: 50vh
     
 
 +mobile
@@ -184,7 +186,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     min-height: 42vh
     max-height: 97vh
     max-width: 59vh
-    height: 53vh
+    height: 63vh
     width: 100%
   .blog-list-item header
     display: block
@@ -194,14 +196,10 @@ $menu-list-border-left: 1px solid $penny-green-invert
     margin: 0
   .author-bio
     font-size: x-small
-  .blog-list-item.box
-    height: fit-content
-  .blog-list-item header-contents
-    height: fit-content
-  .content p
-    height: fit-content
+  .post-meta
+    height: 12vh
   .description
-    visibility: 
+    visibility: hidden
     height: 0px
   .button
     visibility: hidden
@@ -297,7 +295,7 @@ html
   font-weight: bold
   position: inherit
   bottom: 61px
-  height: 13vh
+  height: 8vh
 
 h6
   font-size: 17px
