--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -151,9 +151,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
   border-top-right-radius: calc(0.25rem - 1px)
 .blog-list-item.box
   height: 56vh
-.span
-  content: 
-
+.blog-list-item .header-contents 
+  height: fit-content
 
 
 
@@ -186,7 +185,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     min-height: 42vh
     max-height: 97vh
     max-width: 59vh
-    height: 63vh
+    height: fit-content
     width: 100%
   .blog-list-item header
     display: block
@@ -196,6 +195,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
     margin: 0
   .author-bio
     font-size: x-small
+  .blog-list-item .header-contents
+    height: 8em
   .post-meta
     height: 12vh
   .description
