--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -150,9 +150,11 @@ $menu-list-border-left: 1px solid $penny-green-invert
   border-top-left-radius: calc(0.25rem - 1px)
   border-top-right-radius: calc(0.25rem - 1px)
 .blog-list-item.box
-  height: 56vh
+  height: fit-content
 .blog-list-item .header-contents 
   height: fit-content
+  width: 100%
+  padding: 13px
 
 
 
@@ -173,7 +175,10 @@ $menu-list-border-left: 1px solid $penny-green-invert
   a.courses
     font-family: Harmattan
   .blog-list-item.box
-    height: 50vh
+    height: fit-content
+  .description
+    
+  
     
 
 +mobile
@@ -431,9 +436,7 @@ ul.footer-social li a
 .social
   background-color: #637C76
 
-.header-contents
-  width: 100%
-  padding: 13px
+  
 
 .fa-arrow-right
   color: #F6F1F1
