--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -178,6 +178,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     height: fit-content
   .description
     
+    
   
     
 
@@ -224,12 +225,6 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .marquee
     padding-bottom: 10px
     animation: marquee 9s linear infinite;
-    
-  
-    
-
-.author-bio
-
 
 
 .marquee
@@ -293,14 +288,14 @@ html
   width: 89%
 
 .description
-  width: 100% 
+  width: 99% 
   overflow: hidden 
   text-overflow: ellipsis
   font-family: Harmattan
   font-size: 20px
   font-weight: bold
-  position: inherit
-  bottom: 61px
+  position: absolute
+  bottom: 0em
   height: 8vh
 
 h6
