--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -177,6 +177,9 @@ $menu-list-border-left: 1px solid $penny-green-invert
   .blog-list-item.box
     height: fit-content
   .description
+    padding-top: 10px
+    width: 97%
+    visibility: hidden
     
     
   
@@ -297,6 +300,7 @@ html
   position: absolute
   bottom: 0em
   height: 8vh
+  
 
 h6
   font-size: 17px
